--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.9
   firebase_core: ^2.7.0
+  google_sign_in: ^6.0.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
