--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   firebase_core: ^2.7.0
   google_sign_in: ^6.0.1
   provider: ^6.0.5
+  cloud_firestore: ^4.4.3
+  intl: ^0.17.0
+  firebase_messaging: ^14.2.5
 
 dev_dependencies:
   flutter_test:
