--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   cloud_firestore: ^4.4.3
   intl: ^0.17.0
   firebase_messaging: ^14.2.5
+  animations: ^2.0.7
+  loading_overlay: ^0.3.0
+  circle_list: ^1.0.5
+  sqflite: ^2.2.5
 
 dev_dependencies:
   flutter_test:
