--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   loading_overlay: ^0.3.0
   circle_list: ^1.0.5
   sqflite: ^2.2.5
+  photo_view: ^0.14.0
+  image_picker: ^0.8.7
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_test:
