--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   photo_view: ^0.14.0
   image_picker: ^0.8.7
   open_file: ^3.2.1
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
