--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^0.8.7
   open_file: ^3.2.1
   fluttertoast: ^8.2.1
+  video_thumbnail: ^0.5.3
 
 dev_dependencies:
   flutter_test:
